added curly braces around strings in build_rpms.sh, need to make it a python class, rather than a shell script.  am looking at self._id = uuid.uuid4 in tvitem.py at line 24

--- a/kxfed_ui.ui
+++ b/kxfed_ui.ui
@@ -283,7 +283,13 @@
      <string>Preferences...</string>
     </property>
    </widget>
+   <widget class="QMenu" name="menuRefresh_Cache">
+    <property name="title">
+     <string>Refresh Cache</string>
+    </property>
+   </widget>
    <addaction name="menuPreferences"/>
+   <addaction name="menuRefresh_Cache"/>
   </widget>
  </widget>
  <resources/>
